chore: Update .gitignore to ignore PM_2 folder and add PM_3/Data

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-01_tracks_cleaned.csv
-01_tracks.csv
-02_tracks.csv
-03_tracks.csv
-04_tracks.csv
-05_tracks.csv
-cleaned_data.csv
-06_tracks.csv
-07_tracks.csv
-08_tracks.csv
-09_tracks.csv
-10_tracks.csv
+PM_2/01_tracks_cleaned.csv 
+PM_2/01_tracks.csv 
+PM_2/02_tracks.csv 
+PM_2/03_tracks.csv 
+PM_2/04_tracks.csv 
+PM_2/05_tracks.csv 
+PM_2/06_tracks.csv 
+PM_2/07_tracks.csv 
+PM_2/08_tracks.csv 
+PM_2/09_tracks.csv 
+PM_2/10_tracks.csv 
+PM_2/cleaned_data.csv
+PM_3/Data
