First result in PM4

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,47 @@ PM_2/10_tracks.csv
 PM_2/cleaned_data.csv
 PM_3/Data
 PM_2/data.h5
+PM_4/Tracks
+PM_4/Tracks/00_tracks.csv
+PM_4/Tracks/01_tracks.csv
+PM_4/Tracks/02_tracks.csv
+PM_4/Tracks/03_tracks.csv 
+PM_4/Tracks/04_tracks.csv 
+PM_4/Tracks/05_tracks.csv 
+PM_4/Tracks/06_tracks.csv 
+PM_4/Tracks/07_tracks.csv 
+PM_4/Tracks/08_tracks.csv 
+PM_4/Tracks/09_tracks.csv 
+PM_4/Tracks/10_tracks.csv 
+PM_4/Tracks/11_tracks.csv 
+PM_4/Tracks/12_tracks.csv 
+PM_4/Tracks/13_tracks.csv 
+PM_4/Tracks/14_tracks.csv 
+PM_4/Tracks/15_tracks.csv 
+PM_4/Tracks/16_tracks.csv 
+PM_4/Tracks/17_tracks.csv 
+PM_4/Tracks/18_tracks.csv 
+PM_4/Tracks/19_tracks.csv 
+PM_4/Tracks/20_tracks.csv 
+PM_4/Tracks/21_tracks.csv 
+PM_4/Tracks/22_tracks.csv 
+PM_4/Tracks/23_tracks.csv 
+PM_4/Tracks/24_tracks.csv 
+PM_4/Tracks/25_tracks.csv 
+PM_4/Tracks/26_tracks.csv 
+PM_4/Tracks/27_tracks.csv 
+PM_4/Tracks/28_tracks.csv 
+PM_4/Tracks/29_tracks.csv 
+PM_4/Tracks/30_tracks.csv 
+PM_4/Tracks/31_tracks.csv 
+PM_4/Tracks/32_tracks.csv 
+PM_4/Tracks/Book def.xlsx 
+PM_4/Tracks/Book20.csv 
+PM_4/Tracks/Book21.csv 
+PM_4/Tracks/Book22.csv 
+PM_4/Tracks/Book25.csv 
+PM_4/Tracks/Book26.csv 
+PM_4/Tracks/Book27.csv 
+PM_4/Tracks/Book28.csv 
+PM_4/Tracks/Book29.csv 
+PM_4/Tracks/labeled_tracks.csv
