newApproach - Claude - WORKS

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,11 @@ PM_4/Tracks/Book27.csv
 PM_4/Tracks/Book28.csv 
 PM_4/Tracks/Book29.csv 
 PM_4/Tracks/labeled_tracks.csv
+PM_4/engineered_features.csv
+PM_4/processed_trajectory_data.csv
+PM_4/test_data_processed.csv
+PM_4/train_data_engineered.csv
+PM_4/train_data_processed.csv
+PM_4/test_data_engineered.csv
+PM_4/OLD/engineered_features.csv
+PM_4/OLD/processed_trajectory_data.csv
